--- a/number_Text/number.html
+++ b/number_Text/number.html
@@ -8,6 +8,15 @@
 <body>
 <script>
     alert(1+1);
+    alert(1.2 + 1.3);
+    alert(2 * 5);
+    alert(6 / 2);
+    Math.pow(3,2);       // 9,   3의 2승
+    Math.round(10.6);    // 11,  10.6을 반올림
+    Math.ceil(10.2);     // 11,  10.2를 올림
+    Math.floor(10.6);    // 10,  10.6을 내림
+    Math.sqrt(9);        // 3,   3의 제곱근
+    Math.random();       // 0부터 1.0 사이의 랜덤한 숫자
 </script>
 
 </body>
