--- a/function/function.html
+++ b/function/function.html
@@ -14,7 +14,11 @@
      }
      */
     function numbering() {
-        document.write(1);
+        i = 0;
+        while (i < 10) {
+            document.write(i);
+            i += 1;
+        }
     }
     numbering();
 </script>
