--- a/function/function.html
+++ b/function/function.html
@@ -6,7 +6,7 @@
     <title></title>
 </head>
 <body>
-<script>
+<script type="text/javascript">
     /*
      function 함수명( [인자...[,인자]]){
      코드
@@ -16,10 +16,18 @@
     function numbering() {
         i = 0;
         while (i < 10) {
-            document.write(i);
+            document.write(i + "<br />");
             i += 1;
         }
     }
+    /*for (var i = 0; i < 100; i++) {
+     var i = 0;
+     while (i < 20) {
+     document.write(i + "<br />");
+     i += 1;
+     }
+
+     }*/
     numbering();
 </script>
 </body>
